fix shopping description on mobile

--- a/app/assets/stylesheets/views/things.css.scss
+++ b/app/assets/stylesheets/views/things.css.scss
@@ -463,6 +463,11 @@ div#thing_title {
     margin-bottom: 2rem;
   }
 
+  .shopping_desc {
+    clear: both;
+    padding-top: 1rem;
+  }
+
   .price {
     float: left;
     font-weight: bold;
